--- a/style1.css
+++ b/style1.css
@@ -26,7 +26,6 @@ body .color-overlay {
     justify-content: center;
     height: 100%;
     width: 100%;
-    z-index: 0;
 }
 
 body {
@@ -44,6 +43,7 @@ body {
     top: 0;
     bottom: 100%;
     position: fixed;
+    z-index: 0;
 }
 
 
@@ -51,25 +51,67 @@ body {
 
 .header {
     font-family: var(--head-font);
-    font-size: 20px;
+    font-size: 35px;
     text-align: center;
     text-transform: uppercase;
     padding-bottom: 30px;
+}
+
+
+/*css for body*/
+
+.container {
+    background-color: #29323c;
+    border-radius: 8px;
+    --webkit-border-radius: 10px;
+    box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034), 0 6.7px 5.3px rgba(0, 0, 0, 0.048);
+    overflow: hidden;
+    position: relative;
+    margin: auto;
+    margin-top: 5%;
+    margin-bottom: 10%;
+    width: 50%;
+    padding: 50px;
+    z-index: 1;
+}
+
+label {
+    font-family: var(--txt-font);
+    font-size: 30px;
+    text-transform: uppercase;
+}
+
+input {
+    width: 100%;
+    height: 30px;
+    padding: 20px;
+    border: 3px solid rgb(22, 230, 212);
+    border-radius: 10px;
+    margin: 5px;
+    font-size: 16px;
+    font-family: var(--txt-font);
+}
+
+.sub-btn {
+    font-family: var(--btn-font);
+    border-radius: 7px;
+    width: 200px;
+    height: 50px;
+    font-size: 25px;
+    margin: 22px 20px;
 }
 
 td,
 th {
     border: 1px solid black;
     font-size: 18px;
+    text-align: center;
+    font-size: 18px;
 }
 
 table {
     border-collapse: collapse;
     width: 100%;
-}
-
-td {
-    text-align: center;
 }
 
 tr:hover {
@@ -83,26 +125,4 @@ tr:nth-child(even) {
 th {
     background-color: #191147;
     color: white;
-    text-align: center;
-    font-size: 18px;
-}
-
-label {
-    font-family: sans-serif;
-    font-size: 18px;
-    font-style: italic;
-}
-
-input {
-    width: 300px;
-    border: 1px solid #ddd;
-    border-radius: 3px;
-    outline: 0;
-    padding: 7px;
-    background-color: #fff;
-    box-shadow: inset 1px 1px 5px rgba(0, 0, 0, 0.3);
-}
-
-div {
-    margin: 40px;
 }
