--- a/style1.css
+++ b/style1.css
@@ -49,7 +49,8 @@ body {
 
 /*css-for-header*/
 
-.header {
+.header,
+h2 {
     font-family: var(--head-font);
     font-size: 35px;
     text-align: center;
